# drake-mpc

./: .travis.yml  CMakeLists.txt  Readme.md  box-atlas.ipynb  mosek.lic.enc  requirements.txt  things_we_need_from_drake.md
data/2017-03-13-qhull-missing-vertices/: A.txt  b.txt  interior_point.txt  notes.md  polyhedra_libraries.ipynb
data/2017-03-22-empty-chebyshev-center/: julia_polyhedron_boundedness.ipynb  notes.md  python_polyhedron_boundedness.ipynb  unbounded_polyhedron.npz
data/2017-03-27-higher-precision-nnls/: higher_precision_nnls_in_julia.ipynb  near-infeasible-LP.npz  nnls_LP.ipynb  nnls_args.npz
notebooks/: Box Atlas Formulation.ipynb  PNNLS_julia.ipynb  memtest.jl  nnls.jl  polyhedron_library_comparisons.ipynb
sandbox/: python_tricks.ipynb  test.yaml
setup/: setup.sh.in
src/: ConvexMomentumDynamics.jl  IK.ipynb  active_sets.jl  box-atlas-polynomial.ipynb  boxatlas.py  constr_mpc.py  constr_mpc_IP.py  contactstabilization.py  convex_momentum_dynamics.ipynb  convex_momentum_dynamics_test.jl  exp_mpc.py  exp_mpc_IP.py  inverted_pendulum_mpc.py  mathprog_test.py  mpc_functions.py  ndpiecewise.py  params_DI.py  params_IP.py  piecewise.py  plot_functions.py  polynomial.py  polynomials.jl  py-box-atlas-polynomial-dev.ipynb  py-box-atlas-polynomial.ipynb  reachability_test.py  simplification.ipynb  symbolic-mpc.ipynb  symbolic_comparison.ipynb  symbolic_explicit.ipynb  tondel_2003_example_1.ipynb  tondel_2003_example_1.py
src/ConvexMomentumDynamics/dev/: CMD_optimization.ipynb  CMD_optimization_dev.jl  CMD_optimization_test.jl  convex_momentum_dynamics.ipynb  test_convex_momentum_dynamics.ipynb
src/ConvexMomentumDynamics/src/: ConvexMomentumDynamics.jl  convex_momentum_dynamics_test.jl  optimization.jl  visualization.jl  visualizer.jl
src/ConvexMomentumDynamics/test/: CMD_optimization_test.jl  CMD_visualizer_test.jl  optimization.jl  runtests.jl  visualization.jl
src/boxatlas/: boxatlas.py  boxatlascontroller.py  contactstabilization.py  contactstabilizationutils.py
src/boxatlas/notebooks/: box-atlas-contact-stabilization-dev.ipynb  full-atlas-ik.ipynb  (+5 more)
src/julia/: boxrobots.jl  piecewisefunctions.jl  staticpolynomials.jl
src/mpc/: mpc_demo.ipynb  mpc_tools.py  symbolic.py
src/utils/: piecewise.py  polynomial.py  trajectory.py
(+24 files in other folders)
